[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "pa_proc"
dynamic = ["version"]
dependencies = ["panda", "numpy", "logging", "agcounts","skdh"]
requires-python = ">=3.11"
authors = [
  {name = "Joren Buekers", email = "joren.buekers@isglobal.org"},
]
readme = "README.md"