[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "pa_proc"
dynamic = ["version"]
dependencies = ["pandas", "numpy", "agcounts", "scikit-digital-health", "pygt3x","openmovement"]
requires-python = ">=3.11"
authors = [
  {name = "Joren Buekers", email = "joren.buekers@isglobal.org"},
]
readme = "README.md"